--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,16 +93,13 @@ This files contents are outlined below >>>>
 
 
 .tags {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 8px;
-    margin-top: 10px;
+    margin: 1rem 0;
   }
   .tag {
     background-color: #3d3d3c;
     border-radius: 12px;
-    padding: 0.3rem;
-    margin: .5rem;
+    padding: 0.5rem;
+    margin-right: 10px;
     font-size: 14px;
     color: #ffffffb3;
     cursor: pointer;
